crates/ty_python_semantic/resources/mdtest/snapshots/functions.md_-_Generic_functions___P…_-_Inferring_a_bound_ty…_(5935d14c26afe407).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: functions.md - Generic functions: PEP 695 syntax - Inferring a bound typevar
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/pep695/functions.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | def f[T: int](x: T) -> T:
 4 |     return x
 5 | 
 6 | reveal_type(f(1))  # revealed: Literal[1]
 7 | reveal_type(f(True))  # revealed: Literal[True]
 8 | # error: [invalid-argument-type]
 9 | # error: [invalid-argument-type]
10 | reveal_type(f("string"))  # revealed: int & Unknown
```

# Diagnostics

```
info[revealed-type]: Revealed type
 --> src/mdtest_snippet.py:6:13
  |
4 |     return x
5 |
6 | reveal_type(f(1))  # revealed: Literal[1]
  |             ^^^^ `Literal[1]`
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type]
  |

```

```
info[revealed-type]: Revealed type
 --> src/mdtest_snippet.py:7:13
  |
6 | reveal_type(f(1))  # revealed: Literal[1]
7 | reveal_type(f(True))  # revealed: Literal[True]
  |             ^^^^^^^ `Literal[True]`
8 | # error: [invalid-argument-type]
9 | # error: [invalid-argument-type]
  |

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:10:13
   |
 8 | # error: [invalid-argument-type]
 9 | # error: [invalid-argument-type]
10 | reveal_type(f("string"))  # revealed: int & Unknown
   |             ^^^^^^^^^^^ `int & Unknown`
   |

```

```
error[invalid-argument-type]: Argument to function `f` is incorrect
  --> src/mdtest_snippet.py:10:15
   |
 8 | # error: [invalid-argument-type]
 9 | # error: [invalid-argument-type]
10 | reveal_type(f("string"))  # revealed: int & Unknown
   |               ^^^^^^^^ Argument type `Literal["string"]` does not satisfy upper bound of type variable `T`
   |
info: Type variable defined here
 --> src/mdtest_snippet.py:3:7
  |
1 | from typing_extensions import reveal_type
2 |
3 | def f[T: int](x: T) -> T:
  |       ^^^^^^
4 |     return x
  |
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Argument to function `f` is incorrect
  --> src/mdtest_snippet.py:10:15
   |
 8 | # error: [invalid-argument-type]
 9 | # error: [invalid-argument-type]
10 | reveal_type(f("string"))  # revealed: int & Unknown
   |               ^^^^^^^^ Expected `int & Unknown`, found `Literal["string"]`
   |
info: Function defined here
 --> src/mdtest_snippet.py:3:5
  |
1 | from typing_extensions import reveal_type
2 |
3 | def f[T: int](x: T) -> T:
  |     ^         ---- Parameter declared here
4 |     return x
  |
info: rule `invalid-argument-type` is enabled by default

```
